--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
   <title>Mario Brothers</title>
   <link href="./src/output.css" rel="stylesheet" />
   <link rel="stylesheet" href="./src/style.css" />
-  <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon" />
 </head>
 
-<body class="h-full">
+<body>
   <div onclick="offMask()" class="form-mask fixed top-0 w-screen h-screen transition-all ease-in-out duration-100">
   </div>
 
-  <div class="container mx-auto text-white flex items-center gap-8 m-8 mt-3 justify-start text-2xl">
+  <div class="header container mx-auto text-white flex items-center gap-8 m-8 mt-3 justify-start text-2xl">
     <img class="h-16" src="../assets/icon.png" alt="logo mario" />
-    <a href="" class="hover:text-red-700 transition ease-in-out duration-300">Home</a>
-    <a href="" class="hover:text-red-700 transition ease-in-out duration-300">Nossos Serviços</a>
-    <a href="" class="hover:text-red-700 transition ease-in-out duration-300">Fale Conosco</a>
+    <a href="#" class="hover:text-red-700 transition ease-in-out duration-300">Home</a>
+    <a href="#" class="hover:text-red-700 transition ease-in-out duration-300">Nossos Serviços</a>
+    <a onclick="buttonClick()" class="pointer hover:text-red-700 transition ease-in-out duration-300">Fale
+      Conosco</a>
   </div>
 
-  <div class="flex container mx-auto h-screen items-center justify-between">
+  <div class="main flex container mx-auto h-screen items-center justify-between">
     <div class="w-1/2">
-      <img class="h-56" src="../assets/logo.png" alt="logo mario bros" />
+      <img class="w-80 h-56 logomario" src="../assets/logo.png" alt="logo mario bros" />
       <h3 class="text-3xl font-bold text-white">
         Encanadores Maio & Luigi - Resolvendo Problemas
       </h3>
@@ -39,7 +40,7 @@
         ENTRE EM CONTATO
       </button>
     </div>
-    <img class="h-125" src="../assets/mario.png" alt="mario e luigi" />
+    <img class="h-125 mariolu" src="../assets/mario.png" alt="mario e luigi" />
   </div>
 
   <div class="fixed -z-10 top-0">
